# roboclean

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/skills/architecture/: SKILL.md
.github/skills/backend/: SKILL.md
.github/skills/coding-standards/: SKILL.md
.github/skills/docs/: SKILL.md
.github/skills/frontend/: SKILL.md
.github/skills/testing/: SKILL.md
.github/skills/ui-design/: SKILL.md
.github/workflows/: ci.yml
devlog/: 2026-06-17.md  2026-06-18.md
docs/: chassis-design.md  deployment-guide.md  design-spec.md  development-plan.md  driver-c20-800lrc.md  hardware-bom.md  requirements.md  tech-spec.md
src/app/: build-check.bat  build.gradle.kts  gradlew.bat  settings.gradle.kts
src/robot/: README.md  pytest.ini
src/robot/src/roboclean_bringup/: package.xml  setup.py
src/robot/src/roboclean_bringup/config/: robot_params.yaml
src/robot/src/roboclean_bringup/launch/: bringup.launch.py
src/robot/src/roboclean_bt/: package.xml  setup.py
src/robot/src/roboclean_bt/roboclean_bt/: bt_server.py
src/robot/src/roboclean_bt/test/: test_bt_protocol.py
src/robot/src/roboclean_navigation/: package.xml  setup.py
src/robot/src/roboclean_navigation/config/: nav2_params.yaml  slam_params.yaml
src/robot/src/roboclean_navigation/launch/: navigation.launch.py
src/robot/src/roboclean_navigation/roboclean_navigation/: charging_dock.py  fence_follower.py  path_player.py  path_recorder.py  task_scheduler.py  waypoint_navigator.py
src/robot/src/roboclean_navigation/test/: test_fence_follower.py
(+42 files in other folders)
