<?xml version="1.0"?>
<package format="3">
  <name>roboclean_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and config for RoboClean robot</description>
  <maintainer email="user@roboclean.local">RoboClean Dev</maintainer>
  <license>MIT</license>
  <exec_depend>roboclean_driver</exec_depend>
  <exec_depend>roboclean_sensors</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
