<?xml version="1.0"?>
<package format="3">
  <name>roboclean_navigation</name>
  <version>0.1.0</version>
  <description>SLAM + Nav2 + Waypoints + Charging Dock for RoboClean</description>
  <maintainer email="user@roboclean.local">RoboClean Dev</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
